--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/66ff231c87.js" crossorigin="anonymous"></script>
     <script src="script.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
@@ -30,8 +30,8 @@
                     <h3>Enter card details</h3>
                     <form method="GET" id="payment">
                         <input type="text" name="name" placeholder="Enter your name" required>
-                        <input type="text" name="cardNumber" placeholder="Enter card number" required>
-                        <input type="text" name="CVV" placeholder="Enter CVV" required>
+                        <input type="number" name="cardNumber" placeholder="Enter card number" required>
+                        <input type="number" name="CVV" placeholder="Enter CVV" required>
                         <button id="pay">Pay</button>
                     </form>
                 </div>
